--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://acuria.github.io/mf/'
+baseURL = 'https://acuria.github.io'
 languageCode = 'en-us'
 title = 'aCurias Guides'
 theme = "hugo-book"
